# simple_animated_view_example

.github/: main.yml
.github/workflows/: main.yml
configs/: tailwind.config.js  tsconfig.json
crate/: Cargo.toml
crate/public/: simple.js
crate/src/: animated_view.rs  lib.rs  simple.rs  simple2.rs  simple_back.rs  use_spring.rs  use_spring2.rs
entries/: index.hbs
