[package]
version = "0.1.0"
name = "todo_example"
repository = "n/a"
authors = ["rebo"]
description = "todo example using component state"
categories = ["wasm", "rust", "tailwindcss", "seed", "todo", "example"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]
 
[dev-dependencies]
wasm-bindgen-test = "^0.2.50" # sync with `wasm-bindgen`

[dependencies]
comp_state = "0.0.5"
# comp_state = {path = "../../comp_state"}
# seed_comp_helpers = {path = "../../seed_comp_helpers"}
seed_comp_helpers = "0.0.2"
#seed_comp_helpers = "0.0.1"
enclose = "1.1.8"

# shrinkwraprs = "0.2.3"
derive_more = "0.99.2"
# Sync with seed
serde = "1.0.102"
serde_json = "1.0.40"
futures = "^0.1.27"

wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
seed = "0.5.1"
# seed = { git = "https://github.com/seed-rs/seed.git", branch = "master" }

slotmap = "0.4.0"
js-sys = "0.3.27"
modulator = "0.1.0"
once_cell = "1.2.0"
regex = "1.3.1"

[dependencies.web-sys]
version = "^0.3.28"
features = [
  "ScrollToOptions",
  "Navigator",
  "DataTransfer",
  "DragEvent",
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "MouseEvent",
  "Node",
  "Window",

]

[profile.release]
lto = true
opt-level = 's'

